test/part2/success/typage_pointer1-3.c
int main(){
	
	int *i;
	char *c;	
	int e;	

	*i = e;
	*c = e;

	i = e;
}
