test/part2/fail/typage_pointer1-9.c
int main(){
	
	int *i;
	int t:

	i = t;
}
